# web-sitter

./: Cargo.toml  README.md  testfiles
.github/workflows/: ci.yml
docs/: graph_schema.md  ir.md  language_support.md  mcp-server-design.md  web-ql.md
testfiles/: apache_wrapper_test.c  bounds_string_test.c  bounds_validation_types.c  complex_vuln_test.c  comprehensive_vuln_test.c  cpp_features.cpp  cpp_security.cpp  guard_regression_test.c  guard_validation_test.c  interprocedural_wrapper_rules.yaml  interprocedural_wrapper_test.c  multi_variable_bfs_rules.yaml  multi_variable_bfs_test.c  struct_example.c  symbolic_enhancements_test.c  test.c  union_struct_taint_test.c
testfiles/cpp_dispatch_ambiguous/: base.hpp  main.cpp  malicious.cpp  safe.cpp
testfiles/cpp_virtual_dispatch/: base.hpp  derived.cpp  main.cpp
testfiles/cross_file_engine/: input.c  main.c  process.c
testfiles/real_world/: lighttpd_mod_rewrite.c  openssl_asn1.c
web-mcp/: Cargo.toml
web-mcp/src/: callgraph.rs  index.rs  live_index.rs  main.rs  server.rs  symbol_query.rs  watcher.rs
web-mcp/src/security/: generalize.rs  mod.rs
web-mcp/src/store/: findings.rs  incremental_file.rs  live_workspace.rs  load_test.rs  mod.rs  persistence.rs  revision.rs  shard.rs  sharded_lock.rs
web-mcp/src/tools/: callgraph.rs  dataflow.rs  findings.rs  impact.rs  lookup.rs  mod.rs  security.rs  variants.rs  verify.rs
web-mcp/tests/: callgraph_tools.rs  dataflow_tools.rs  findings_tools.rs  impact_tools.rs  incremental_parity_fuzz.rs  initialize_handshake.rs  live_updates.rs  lookup_tools.rs  perf_gate.rs  security_tools.rs  variants_tools.rs  verify_tools.rs
web-profiler/: Cargo.toml
web-profiler/src/: histogram.rs  lib.rs  metrics.rs  profiler.rs  report.rs  thread_pool.rs
web-profiler/tests/: integration.rs
web-ql/: Cargo.toml
web-ql-queries/c/: cwe121_cwe787_buffer_overflows.wql  cwe125_oob_read.wql  cwe134_format_string.wql  cwe190_191_integer_overflow.wql  cwe209_info_leak.wql  cwe22_path_traversal.wql  cwe327_weak_crypto.wql  cwe362_race_condition.wql  cwe369_divide_by_zero.wql  cwe401_415_416_memory_safety.wql  cwe476_null_deref.wql  cwe522_credential_protection.wql  cwe617_reachable_assertion.wql  cwe674_770_resource_control.wql  cwe78_command_injection.wql  cwe798_hardcoded_credentials.wql  cwe822_untrusted_pointer.wql  cwe835_843_misc.wql  cwe89_sql_injection.wql
web-ql-queries/cpp/: cwe22_path_traversal.wql  cwe327_weak_crypto.wql  cwe401_415_416_new_delete.wql  cwe78_command_injection.wql  cwe798_hardcoded_credentials.wql
web-ql-queries/go/: cwe209_misc.wql  cwe22_path_traversal.wql  cwe327_weak_crypto.wql  cwe78_command_injection.wql  cwe798_hardcoded_credentials.wql  cwe89_sql_injection.wql
web-ql-queries/java/: cwe209_1333_misc.wql  cwe22_path_traversal.wql  cwe327_weak_crypto.wql  cwe476_null_deref.wql  cwe78_command_injection.wql  cwe798_hardcoded_credentials.wql  cwe89_sql_injection.wql
web-ql-queries/javascript/: cwe22_path_traversal.wql  cwe327_798_misc.wql  cwe78_command_injection.wql  cwe89_sql_injection.wql
web-ql-queries/python/: cwe1333_209_misc.wql  cwe22_path_traversal.wql  cwe327_weak_crypto.wql  cwe78_command_injection.wql  cwe798_hardcoded_credentials.wql  cwe89_sql_injection.wql
web-ql-queries/rust/: cwe22_path_traversal.wql  cwe327_798_misc.wql  cwe78_command_injection.wql  cwe89_sql_injection.wql
web-ql-queries/typescript/: cwe22_path_traversal.wql  cwe327_798_1333_misc.wql  cwe78_command_injection.wql  cwe89_sql_injection.wql
web-ql/examples/: nginx_chain_report.rs
web-ql/src/: alias.rs  ast.rs  cfg.rs  dfg.rs  engine.rs  finding.rs  guard.rs  ir.rs  kind_index.rs  layered_symbol_index.rs  lexer.rs  lib.rs  library.rs  loader.rs  node_ref.rs  nullability.rs  parser.rs  planner.rs  size_tracking.rs  symbol_index.rs  symbolic.rs  taint.rs  types.rs  workspace.rs
web-ql/src/security_patterns/: c.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  rust.rs  typescript.rs
web-ql/tests/: cfg.rs  dfg.rs  engine.rs  fixtures.rs  integration.rs  kind_index.rs  lexer.rs  oop_dataflow.rs  parser.rs  polymorphism.rs  size_tracking.rs  workspace.rs
web-scan/: Cargo.toml
web-scan/src/: main.rs  output.rs
web-scan/src/html_report/: mod.rs  report.css  report.js
web-sitter/: Cargo.toml
web-sitter/examples/: macro_alias_probe.rs
web-sitter/src/: call_analysis.rs  cfg.rs  cpg_generator.rs  dfg.rs  function_summary.rs  incremental.rs  lib.rs  lifter.rs  security_patterns.rs  symbol_anonymizer.rs  symbol_id.rs  type_display.rs  type_inference.rs
web-sitter/tests/: c_grammar_full_coverage.rs  c_grammar_json_contract.rs  cpg_comprehensive.rs  cpg_comprehensive_pytest.rs  cpg_infrastructure.rs  cpg_oop_dataflow.rs  cpp_cpg_parity.rs  cpp_grammar_coverage.rs  go_grammar_coverage.rs  grammar_contract.rs  identifier_flag.rs  incremental.rs  incremental_cache.rs  java_grammar_coverage.rs  javascript_grammar_coverage.rs  language_features.rs  python_grammar_coverage.rs  rust_grammar_coverage.rs  symbol_anonymizer.rs  typescript_grammar_coverage.rs
