[workspace]
members = [
    "web-sitter",
    "web-ql",
    "web-profiler",
    "web-scan",
    "web-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Akshat <akshat@example.com>"]

[workspace.dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.219", features = ["derive"] }
sonic-rs = "0.5.8"
bincode = { version = "2.0.1", features = ["serde"] }
regex = "1.11.1"
thiserror = "2.0.16"
tree-sitter = "0.26.3"
tree-sitter-c = "0.24.1"
tree-sitter-language = "0.1.5"
sha2 = "0.10.8"
petgraph = "0.8.3"
smallvec = "1.13"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.2"
rustc-hash = "2.1"
tree-sitter-language-pack = { version = "1.11.0", default-features = false }
logos = "0.15"
roaring = "0.10"
toml = "0.8"
lru = "0.12"
serde_json = "1.0"
rayon = "1.10"
num_cpus = "1.16"
clap = { version = "4.5", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
