[package]
name = "web-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
web-sitter = { path = "../web-sitter" }
web-ql = { path = "../web-ql" }
rmcp = { version = "2.1", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["process", "io-util", "time"] }
