[package]
name = "web-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
web-sitter = { path = "../web-sitter" }
web-ql = { path = "../web-ql" }
rmcp = { version = "2.1", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal", "sync", "fs"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
schemars = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = { workspace = true }
redb = "2.2"
bincode = { workspace = true }
lz4_flex = { version = "0.11", default-features = false, features = ["frame"] }
lru = "0.12"
dashmap = "6"
notify-debouncer-mini = "0.7"
arc-swap = "1.7"

[dev-dependencies]
tokio = { version = "1", features = ["process", "io-util", "time"] }
tempfile = "3"
