[package]
name = "web-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "web-scan"
path = "src/main.rs"

[dependencies]
web-ql = { path = "../web-ql" }
web-sitter = { path = "../web-sitter" }
web-profiler = { path = "../web-profiler" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
clap.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
